--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-router": "^4.0.0-alpha.5",
     "send": "0.14.1",
+    "sockjs-client": "1.1.1",
     "strip-ansi": "3.0.1",
     "url": "0.11.0",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
-    "sockjs-client": "1.1.1",
     "write-file-webpack-plugin": "3.3.0"
   },
   "devDependencies": {
